--- a/themes/meghna-hugo/layouts/partials/service.html
+++ b/themes/meghna-hugo/layouts/partials/service.html
@@ -1,37 +1,62 @@
 {{ $data := index site.Data site.Language.Lang }}
-
-{{ if $data.service.service.enable}}
-{{ with $data.service.service}}
-{{"<!-- service -->" | safeHTML }}
+{{ if $data.service.service.enable }}
+{{ with $data.service.service }}
+<!-- service -->
 <section id="services" class="bg-one section">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-lg-12">
-				{{"<!-- section title -->" | safeHTML }}
-				<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-					<h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-						{{ with .title }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h2>
-					<div class="border-meghna"></div>
-				</div>
-			</div>
-			{{"<!-- /section title -->" | safeHTML }}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <!-- section title -->
+                <div class="title text-center wow fadeIn" data-wow-duration="500ms">
+                    <h2>{{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
+                            {{ with .title }} {{ after (len (index (split . " ") 0)) . | safeHTML }} {{ end }}</span></h2>
+                    <div class="border-meghna"></div>
+                </div>
+            </div>
+            <!-- /section title -->
 
-			{{ range .service_item}}
-			{{"<!-- Single Service Item -->" | safeHTML }}
-			<article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration="500ms">
-				<div class="service-block text-center">
-					<div class="service-icon text-center">
-						<i class="{{ .icon }}"></i>
-					</div>
-					<h3>{{ .name | markdownify }}</h3>
-					<p>{{ .content | markdownify }}</p>
-				</div>
-			</article>
-			{{"<!-- End Single Service Item -->" | safeHTML }}
-			{{ end }}
-		</div>
-	</div>
+            <div class="row justify-content-center" id="servicesContainer">
+                <!-- Services will be dynamically added here using JavaScript -->
+            </div>
+        </div>
+    </div>
 </section>
-{{"<!-- /service -->" | safeHTML }}
+
+<!-- Dynamic Services Script -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Fetch services from the API
+        $.ajax({
+            type: 'GET',
+            url: 'https://teal-basbousa-aada12.netlify.app/.netlify/functions/api/getservice',
+            success: function (response) {
+                // Iterate through the serviceData array and render services
+                response.serviceData.forEach(function (service) {
+                    // Render each service here
+                    var serviceHTML = `
+                        <!-- Single Service Item -->
+                        <article class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-duration="500ms">
+                            <div class="service-block text-center">
+                                <div class="service-icon text-center">
+                                    <i class="YOUR_ICON_CLASS"></i> <!-- Replace with actual icon class -->
+                                </div>
+                                <h3>${service.nom_du_service}</h3>
+                                <p>${service.description}</p>
+                            </div>
+                        </article>
+                        <!-- End Single Service Item -->
+                    `;
+                    $('#servicesContainer').append(serviceHTML);
+                });
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    });
+</script>
+
+<!-- /service -->
 {{ end }}
 {{ end }}
