--- a/themes/meghna-hugo/layouts/index.html
+++ b/themes/meghna-hugo/layouts/index.html
@@ -1,15 +1,26 @@
 {{ define "main" }}
-
+{{ partial "navigation.html" . }}
 {{ partial "banner.html" . }}
 
-{{ partial "navigation.html" . }}
 
+
+{{ partial "about.html" . }}
 
 {{ partial "feature.html" . }}
 
+
+
 {{ partial "service.html" . }}
 
-{{ partial "pricing.html" . }}
+
+
+{{ partial "portfolio.html" . }}
+
+{{ partial "funfacts.html" . }}
+
+{{ partial "team.html" . }}
+
+
 
 {{ partial "testimonial.html" . }}
 
