--- a/themes/meghna-hugo/layouts/partials/contact.html
+++ b/themes/meghna-hugo/layouts/partials/contact.html
@@ -82,6 +82,9 @@
                             success: function(response) {
                                 console.log(response);
                                 alert(response.msg);
+                                location.reload();
+                                
+
                             },
                             error: function(error) {
                                 console.log(error);
