--- a/themes/meghna-hugo/layouts/partials/about.html
+++ b/themes/meghna-hugo/layouts/partials/about.html
@@ -9,8 +9,8 @@
 			<div class="col-lg-12">
 				{{"<!-- section title -->" | safeHTML}}
 				<div class="title text-center wow fadeIn" data-wow-duration="1500ms">
-					<h2> {{ with .title }} {{ index (split . " ") 0 | safeHTML }} {{ end }}<span class="color">
-						{{ with .title }} {{ index (split . " ") 1 | safeHTML }} {{ end }} </span></h2>
+					<h2> {{ with .title }} {{ index (split . " that") 0 | safeHTML }} {{ end }}<span class="color">
+						{{ with .title }} {{ index (split . "that") 1 | safeHTML }} {{ end }} </span></h2>
 					<div class="border-meghna"></div>
 				</div>
 			</div>
@@ -20,7 +20,7 @@
 			<div class="col-lg-4 text-center wow fadeInUp" data-wow-duration="500ms">
 				<div class="block">
 					<div class="icon-box">
-						{{with .icon}}<i class="{{ . }}"></i>{{ end }}
+						<img src="{{.icon}}">
 					</div>
 					{{"<!-- Express About Yourself -->" | safeHTML}}
 					<div class="content text-center">
