--- a/themes/meghna-hugo/layouts/partials/footer.html
+++ b/themes/meghna-hugo/layouts/partials/footer.html
@@ -16,7 +16,7 @@
 				{{"<!-- copyright -->" | safeHTML}}
 				<div class="copyright text-center">
 					<a href="{{ site.Home.Permalink }}">
-						<img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" height="42" />
+						<h1>Outposts</h1>
 					</a>
 					<br>
 					<p>{{ site.Params.copyright | markdownify }}</p>
