--- a/themes/meghna-hugo/layouts/partials/about.html
+++ b/themes/meghna-hugo/layouts/partials/about.html
@@ -19,8 +19,8 @@
 			{{"<!-- About item -->" | safeHTML}}
 			<div class="col-lg-4 text-center wow fadeInUp" data-wow-duration="500ms">
 				<div class="block">
-					<div class="icon-box">
-						<img src="{{.icon}}">
+					<div style="height: 90px;">
+						<img src="{{.icon}}" style="color: rgb(112, 112, 112);">
 					</div>
 					{{"<!-- Express About Yourself -->" | safeHTML}}
 					<div class="content text-center">
