--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -552,6 +552,8 @@ a:hover {
   border-bottom: 2px solid transparent;
   transition: .5s all;
   margin-bottom: 20px;
+  height: 250px;
+  max-height: 500px;
 }
 
 .about .block:hover {
@@ -946,11 +948,13 @@ a:hover {
   Services section
 ==================================================================*/
 .service-block {
+  
   padding: 60px 20px;
   border-left: 1px solid rgba(236, 239, 241, 0.07);
   border-top: 1px solid rgba(236, 239, 241, 0.07);
   margin-bottom: 40px;
-  box-shadow: 2px 2px 5px rgba(44, 44, 44, 0.3), 13px 13px 0 rgba(255, 255, 255, 0.7);
+  box-shadow: 2px 2px 2px rgba(44, 44, 44, 0.3), 4px 4px 0 rgba(255, 255, 255, 0.7);
+  height: 300px;
 }
 
 .service-block .service-icon {
@@ -1023,6 +1027,7 @@ a:hover {
 .team-member {
   background-color: #292F36;
   margin-bottom: 10px;
+  height: 460px;
 }
 
 .team-member:hover .mask {
@@ -1036,6 +1041,7 @@ a:hover {
 .member-photo {
   overflow: hidden;
   position: relative;
+  
 }
 
 @media (max-width: 768px) {
@@ -1051,11 +1057,17 @@ a:hover {
 
 .member-photo img {
   transition: all 0.4s ease 0s;
+  object-fit: cover;
+  height: 150px;
+  width: 253px;
+
 }
 
 @media (max-width: 768px) {
   .member-photo img {
     display: inline-block;
+    object-fit: cover;
+
   }
 }
 
