--- a/themes/meghna-hugo/layouts/partials/footer.html
+++ b/themes/meghna-hugo/layouts/partials/footer.html
@@ -1,30 +1,83 @@
 {{"<!-- end Contact Area -->" | safeHTML}}
-<footer id="footer" class="section-bg">
+<div class="mt-5 pt-5 pb-5 footer">
 	<div class="container">
-		<div class="row wow fadeInUp" data-wow-duration="500ms">
-			<div class="col-xl-12">
-
-				{{"<!-- Footer Social Links -->" | safeHTML}}
-				<div class="social-icon">
-					<ul class="list-inline">
-						{{ range site.Params.social }}
-						<li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
-						{{ end }}
-					</ul>
-				</div>
-
-				{{"<!-- copyright -->" | safeHTML}}
-				<div class="copyright text-center">
-					<a href="{{ site.Home.Permalink }}">
-						<h1>Outposts</h1>
-					</a>
-					<br>
-					<p>{{ site.Params.copyright | markdownify }}</p>
-				</div>
+	  <div class="row">
+		<div class="col-lg-5 col-xs-12 about-company">
+		  <h2 style="color: #73c9d8">Outposts</h2>
+		  <p class="pr-5 text-white-50">Use DevOps as a Service for alignment of processes and performance boost to deliver flawless projects.</p>
+		  <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+		  <div id="s">
+			<a href="https://itoutposts.com/wp-content/uploads/2022/06/IT_Outposts_presentation.pdf"><button type="submit" id="contact-submit" class="btn btn-transparent btn-block"  value="s" style="width: 100px;">Presentation</button>
+			</a></div>
+		</div>
+		<div class="col-lg-3 col-xs-12 links">
+			<h4 class="mt-lg-0 mt-sm-3" style="color: #73c9d8">Links</h4>
+			<div class="scrollable-list">
+			  <ul class="m-0 p-0">
+			  <li><a href="https://itoutposts.com/aws-consulting-services/">Hubrid Cloud Security Solutions</a></li>
+			  <li> <a href="https://itoutposts.com/managed-google-cloud/">Hubrid Cloud Solutions for Minneapolis</a></li>
+			  <li> <a href="https://itoutposts.com/azure-managed-services-provider/">Hubrid Cloud Solutions for Waukesha</a></li>
+			  <li> <a href="https://itoutposts.com/aws-kubernetes-managed-service/">Private Cloud Service</a></li>
+			  <li> <a href="https://itoutposts.com/managed-kubernetes-services/">Dev Ops Consulting Services in Denver</a></li>
+			  <li> <a href="https://itoutposts.com/it-security-audit-company/">Cloud Server Monitoring Services</a></li>
+			  <li> <a href="https://itoutposts.com/devops-monitoring/">Multi CLoud Monitoring Services</a></li>
+			  <li> <a href="#">Nam mauris velit</a></li>
+			  <li> <a href="#">Etiam vitae mauris</a></li>
+			  <li> <a href="#">Fusce scelerisque</a></li>
+			  <li> <a href="#">Sed faucibus</a></li>
+			  <li> <a href="#">Mauris efficitur nulla</a></li>
+			  <li> <a href="#">Lorem ipsum</a></li>
+			  <li> <a href="#">Nam mauris velit</a></li>
+			  <li> <a href="#">Etiam vitae mauris</a></li>
+			  <li> <a href="#">Fusce scelerisque</a></li>
+			  <li> <a href="#">Sed faucibus</a></li>
+			  <li> <a href="#">Mauris efficitur nulla</a></li>
+			</ul>
 			</div>
 		</div>
+		<div class="col-lg-4 col-xs-12 location">
+		  <h4 class="mt-lg-0 mt-sm-4" style="color: #73c9d8">Location</h4>
+		  <p>97 Robochaya Street (Checheliv district), Office 26/1, Dnipro City, Ukraine, 49000</p>
+		  <p>Spyrou Araouzou, 165, LORDOS WATERFRONT COURT, 4th floor, Flat/Office 402, Limassol, 3036, Cyprus</p>
+		  <p class="mb-0"><i class="fa fa-phone mr-3"></i>+357 25 059376</p>
+		  <p><i class="fa fa-envelope-o mr-3"></i>hello@itoutposts.com</p>
+		</div>
+	  </div>
+	  <div class="row mt-5">
+		<div class="col copyright">
+		  <p class=""><small class="text-white-50">IT Outposts © 2024 |Sitemap</small></p>
+		</div>
+	  </div>
 	</div>
-</footer>
+	</div>
+	<style>
+		.scrollable-list {
+			  max-height: 200px; /* Adjust the height as needed */
+			  overflow-y: auto;
+			  scrollbar-width: thin; /* Firefox */
+			  scrollbar-color: rgb(54, 212, 186) #f4f4f4; /* Firefox */
+			}
+		
+			.scrollable-list::-webkit-scrollbar {
+			  width: 4px; /* Safari and Chrome */
+			}
+		
+			.scrollable-list::-webkit-scrollbar-thumb {
+			  background-color: rgb(66, 206, 183); /* Thumb color */
+			  border-radius: 4px; /* Rounded corners */
+			}
+		
+		  
+			/* Additional styles for the list items */
+			.scrollable-list ul {
+			  padding: 10px;
+			  margin: 0;
+			}
+			.scrollable-list a:hover {
+			  text-decoration: underline;
+			}
+		
+			 </style>
 {{"<!-- /footer -->" | safeHTML}}
 
 {{ "<!-- Google Map API -->" | safeHTML }}
