--- a/themes/meghna-hugo/layouts/index.html
+++ b/themes/meghna-hugo/layouts/index.html
@@ -25,7 +25,7 @@
 {{ partial "testimonial.html" . }}
 
 {{ partial "blog.html" . }}
-
+{{ partial "faq.html" . }}
 {{ partial "contact.html" . }}
 
 {{ partial "map.html" . }}
