--- a/themes/meghna-hugo/layouts/partials/faq.html
+++ b/themes/meghna-hugo/layouts/partials/faq.html
@@ -1,5 +1,5 @@
-<div class="faq">
-    <h2 class="faq-t">Frequently Asked Questions</h2>
+<div class="faq" id="FAQ">
+    <h2 class="faq-t" style="text-align: center;">Frequently Asked Questions</h2>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -50,7 +50,7 @@
 <style>
     .faq {
         padding: 0 20rem;
-        padding-top: 10rem;
+        margin-bottom: 20px;
     }
 
     .faq-t {
